{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 23,
  "lineage": "0ff51aec-893e-10f2-c987-27a481f9266d",
  "resources": [
    {
      "mode": "data",
      "type": "aws_lb",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:956118719056:loadbalancer/app/ticketdesk-alb/11cd720b1dd95963",
            "arn_suffix": "app/ticketdesk-alb/11cd720b1dd95963",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "ticketdesk-alb-779410850.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:956118719056:loadbalancer/app/ticketdesk-alb/11cd720b1dd95963",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ticketdesk-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-00e87eebde7f90e50"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02365ec9f4ac98e0b"
              },
              {
                "subnet_id": "subnet-09ec75640e87cc03d"
              }
            ],
            "subnets": [
              "subnet-02365ec9f4ac98e0b",
              "subnet-09ec75640e87cc03d"
            ],
            "vpc_id": "vpc-0b1b561ab96fac233",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:956118719056:listener/app/ticketdesk-alb/11cd720b1dd95963/c27e8d39cf9c46af",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [
                  {
                    "stickiness": [
                      {
                        "duration": 3600,
                        "enabled": false
                      }
                    ],
                    "target_group": [
                      {
                        "arn": "arn:aws:elasticloadbalancing:ap-south-1:956118719056:targetgroup/ticketdesk-api-tg/1ecceaab6e4ab15a",
                        "weight": 1
                      }
                    ]
                  }
                ],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:956118719056:targetgroup/ticketdesk-api-tg/1ecceaab6e4ab15a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:956118719056:listener/app/ticketdesk-alb/11cd720b1dd95963/c27e8d39cf9c46af",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:956118719056:loadbalancer/app/ticketdesk-alb/11cd720b1dd95963",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_lb_target_group",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:956118719056:targetgroup/ticketdesk-api-tg/1ecceaab6e4ab15a",
            "arn_suffix": "targetgroup/ticketdesk-api-tg/1ecceaab6e4ab15a",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/api/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:956118719056:targetgroup/ticketdesk-api-tg/1ecceaab6e4ab15a",
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:956118719056:loadbalancer/app/ticketdesk-alb/11cd720b1dd95963"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ticketdesk-api-tg",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0b1b561ab96fac233"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:956118719056:security-group/sg-00e87eebde7f90e50",
            "description": "Security group for alb",
            "filter": null,
            "id": "sg-00e87eebde7f90e50",
            "name": "ticketdesk-alb-sg",
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0b1b561ab96fac233"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:956118719056:security-group/sg-0534bba921f1dd6fb",
            "description": "Security group for TicketDesk ECS Fargate API",
            "filter": null,
            "id": "sg-0534bba921f1dd6fb",
            "name": "ticketdesk-api-sg",
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0b1b561ab96fac233"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "public_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:956118719056:subnet/subnet-02365ec9f4ac98e0b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "available_ip_address_count": 250,
            "cidr_block": "20.0.1.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02365ec9f4ac98e0b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "956118719056",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "TicketDesk-Public-Subnet-1"
            },
            "vpc_id": "vpc-0b1b561ab96fac233"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "public_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:956118719056:subnet/subnet-09ec75640e87cc03d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "available_ip_address_count": 249,
            "cidr_block": "20.0.2.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09ec75640e87cc03d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "956118719056",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "TicketDesk-Public-Subnet-2"
            },
            "vpc_id": "vpc-0b1b561ab96fac233"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "ticketdesk",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:956118719056:vpc/vpc-0b1b561ab96fac233",
            "cidr_block": "20.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0ee01c3ab3885b851",
                "cidr_block": "20.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-00086b8593618bb63",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b1b561ab96fac233",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0855d287e778e204c",
            "owner_id": "956118719056",
            "tags": {
              "Name": "TicketDesk-VPC"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}